Fixed filename alignment issue

--- a/less/fileinput.less
+++ b/less/fileinput.less
@@ -24,6 +24,8 @@
   margin-bottom: 9px;
   display: inline-block;
   .form-control {
+    padding-top: 7px;
+    padding-bottom: 5px;
     margin-bottom: 0px;
     vertical-align: middle;
     cursor: text;
